# chess

./: .gitignore  CMakeLists.txt
include/: base.h  bitboard.h  board.h  command.h  engine.h  move.h  movegen.h  perft.h  repl.h  types.h
lib/: bitboard.c  board.c  command.c  engine.c  gui.c  main.c  move.c  movegen.c  perft.c  repl.c  tests.c  types.c
shader/: fragment.glsl  vertex.glsl
